force-app/main/default/objects/UserID__c/UserID__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>UserID</label>
</CustomObject>