force-app/main/default/objects/UserID__c/fields/Antoine_T__c.field-meta.xml
<CustomField>
    <fullName>Antoine_T__c</fullName>
    <label>SelfCare</label>
    <length>18</length>
    <type>Text</type>
</CustomField>