force-app/main/default/objects/UserID__c/fields/API_BM_SF__c.field-meta.xml
<CustomField>
    <fullName>API_BM_SF__c</fullName>
    <label>BO user</label>
    <length>18</length>
    <type>Text</type>
</CustomField>