force-app/main/default/objects/UserID__c/fields/ArthurVeron__c.field-meta.xml
<CustomField>
    <fullName>ArthurVeron__c</fullName>
    <label>LeadGen</label>
    <length>18</length>
    <type>Text</type>
</CustomField>