force-app/main/default/objects/UserID__c/fields/Automation_User__c.field-meta.xml
<CustomField>
    <fullName>Automation_User__c</fullName>
    <label>Automation User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>