force-app/main/default/objects/UserID__c/fields/BackWatch__c.field-meta.xml
<CustomField>
    <fullName>BackWatch__c</fullName>
    <label>BackWatch</label>
    <length>18</length>
    <type>Text</type>
</CustomField>