force-app/main/default/objects/UserID__c/fields/BackWatch_EU__c.field-meta.xml
<CustomField>
    <fullName>BackWatch_EU__c</fullName>
    <label>BackWatch EU</label>
    <length>18</length>
    <type>Text</type>
</CustomField>