force-app/main/default/objects/UserID__c/fields/BackWatch_US__c.field-meta.xml
<CustomField>
    <fullName>BackWatch_US__c</fullName>
    <label>BackWatch US</label>
    <length>18</length>
    <type>Text</type>
</CustomField>