force-app/main/default/objects/UserID__c/fields/Charles_HENRARD__c.field-meta.xml
<CustomField>
    <fullName>Charles_HENRARD__c</fullName>
    <label>Charles HENRARD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>