force-app/main/default/objects/UserID__c/fields/Cyriac_Bar__c.field-meta.xml
<CustomField>
    <fullName>Cyriac_Bar__c</fullName>
    <label>Cyriac Barrois</label>
    <length>18</length>
    <type>Text</type>
</CustomField>