force-app/main/default/objects/UserID__c/fields/Felix__c.field-meta.xml
<CustomField>
    <fullName>Felix__c</fullName>
    <label>Felix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>