force-app/main/default/objects/UserID__c/fields/Julie__c.field-meta.xml
<CustomField>
    <fullName>Julie__c</fullName>
    <label>Julie</label>
    <length>18</length>
    <type>Text</type>
</CustomField>