force-app/main/default/objects/UserID__c/fields/KYBs_Adyen__c.field-meta.xml
<CustomField>
    <fullName>KYBs_Adyen__c</fullName>
    <label>KYBs Adyen</label>
    <length>18</length>
    <type>Text</type>
</CustomField>