force-app/main/default/objects/UserID__c/fields/Lea_P__c.field-meta.xml
<CustomField>
    <fullName>Lea_P__c</fullName>
    <label>Lea P</label>
    <length>18</length>
    <type>Text</type>
</CustomField>