force-app/main/default/objects/UserID__c/fields/Legal_Team__c.field-meta.xml
<CustomField>
    <fullName>Legal_Team__c</fullName>
    <label>Legal Team</label>
    <length>18</length>
    <type>Text</type>
</CustomField>