force-app/main/default/objects/UserID__c/fields/Lucas_Labarre__c.field-meta.xml
<CustomField>
    <fullName>Lucas_Labarre__c</fullName>
    <label>Swen Hueber</label>
    <length>18</length>
    <type>Text</type>
</CustomField>