force-app/main/default/objects/UserID__c/fields/Mathilde_Quenu__c.field-meta.xml
<CustomField>
    <fullName>Mathilde_Quenu__c</fullName>
    <label>Mathilde Quenu</label>
    <length>18</length>
    <type>Text</type>
</CustomField>