force-app/main/default/objects/UserID__c/fields/Richard__c.field-meta.xml
<CustomField>
    <fullName>Richard__c</fullName>
    <label>Richard</label>
    <length>18</length>
    <type>Text</type>
</CustomField>