force-app/main/default/objects/UserID__c/fields/Risk_Team__c.field-meta.xml
<CustomField>
    <fullName>Risk_Team__c</fullName>
    <label>Risk Team</label>
    <length>18</length>
    <type>Text</type>
</CustomField>