force-app/main/default/objects/UserID__c/fields/Sam__c.field-meta.xml
<CustomField>
    <fullName>Sam__c</fullName>
    <label>Sam</label>
    <length>18</length>
    <type>Text</type>
</CustomField>