force-app/main/default/objects/UserID__c/fields/Santosh__c.field-meta.xml
<CustomField>
    <fullName>Santosh__c</fullName>
    <label>Santosh</label>
    <length>18</length>
    <type>Text</type>
</CustomField>