force-app/main/default/objects/UserID__c/fields/Sebastien__c.field-meta.xml
<CustomField>
    <fullName>Sebastien__c</fullName>
    <label>Sebastien</label>
    <length>18</length>
    <type>Text</type>
</CustomField>