force-app/main/default/objects/UserID__c/fields/SSC_Access_Support_Case__c.field-meta.xml
<CustomField>
    <fullName>SSC_Access_Support_Case__c</fullName>
    <label>SSC Access Support Case</label>
    <length>18</length>
    <type>Text</type>
</CustomField>